--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
               <span>
                 <i class="far fa-envelope"></i>
               </span>
-              Qayumovasror@gmail.com
+              Qayumovasror2003@gmail.com
             </a>
             <br />
             <a class="link__item" href="#">
